<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tracker(Java)</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="Forgot_password">Forgot Password?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account" >Do not have an account?</string>
    <string name="email_and_password_fields_are_empty">Email and password fields are empty</string>
    <string name="user_not_registered_please_register">User not registered, please register</string>
    <string name="user_already_registered_please_login">User already registered, please login</string>
    <string name="user_already_registered">User already registered</string>
    <string name="operation_succeeds">Operation succeeds</string>
    <string name="error_occurred">Error occurred</string>
    <string name="please_enable_gps_and_internet">Please enable GPS and Internet</string>
    <string name="location_permission_denied">location permission denied</string>
    <string name="location_not_available">location_not_available</string>
    <string name="location_not_availableE">Location not available</string>
    <string name="successful_sending_to_firebase">Successful Sending to Firebase</string>
    <string name="sending_error_occurred">Sending error occurred</string>
    <string name="this_user_is_not_in_the_system_please_register">This user is not in the system, please register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">START</string>
    <string name="this_user_is_missing">This user is missing</string>
    <string name="gps_on">GPS on</string>
    <string name="permission_to_locate_is_denied">Permission to locate is denied</string>
    <string name="activate_gps_in_the_settings_to_use_this_feature">Activate GPS in the settings to use this feature.</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="Data_sent_to_cloud">Data sent to cloud</string>
    <string name="data_not_sent_to_cloud">Data not sent to cloud</string>
    <string name="coordinates_not_received">Coordinates not received</string>
    <string name="stop">Stop</string>
    <string name="login_error">Login error</string>
    <string name="user_in_the_system">User in the system</string>
    <string name="coordinates_successfully_removed_from_room_database">Coordinates successfully removed from Room database</string>
    <string name="failed_to_send_data_to_the_cloud">Failed to send data to the cloud</string>
    <string name="no_internet">No internet</string>
    <string name="fail">registration failed</string>
    <string name="success">User registration completed successfully</string>
    <string name="failed_to_delete_data_from_room">Failed to delete data from Room</string>
    <string name="invalid_email">Invalid email</string>
    <string name="operations_performed_successfully">Operations performed successfully</string>
    <string name="failed">Failed</string>
    <string name="Настройки_уведомлений_доступны">Настройки уведомлений доступны</string>
    <string name="Настройки_уведомлений_недоступны">Настройки уведомлений недоступны</string>
    <string name="Служба_уведомлений_недоступна">Служба уведомлений недоступна</string>
    <string name="notification_permission_denied">notification permission denied</string>
    <string name="gps_is_off">GPS is off</string>
    <string name="the_user_did_not_grant_both_permissions">The user did not grant both permissions</string>
    <string name="Пользователь_сохранен">Пользователь сохранен</string>
    <string name="Не_получилось_сохранить_пользователя">Не получилось сохранить пользователя, повторите еще раз</string>
    <string name="db_is_empty">DB is empty</string>
    <string name="current_user_is_missing">Current user is missing</string>
    <string name="succes_in_method_singinuser">Succes in method singInUser</string>
    <string name="my_foreground_service">My Foreground Service</string>
    <string name="tracking_your_location">Tracking your location...</string>
</resources>